--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "laravel/lumen-framework": "5.7.*",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
