--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "kosinix/grafika": "dev-master",
         "laravel/lumen-framework": "5.7.*",
         "league/flysystem-aws-s3-v3": "~1.0",
         "vlucas/phpdotenv": "~2.2"
